--- a/basic.html
+++ b/basic.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript 基础练习案例</title>
-    <script src="./js/basic.js"></script>
 </head>
 
 <body>
-    <h1>Javascript 基础练习案例</h1>
+    <h2>Javascript 基础练习案例</h2>
     <p>调试请看后台</p>
-    <button>切换用户</button>
+    <h1></h1>
+    <button type="button">切换用户</button>
 </body>
+<script src="./js/basic.js"></script>
 
 </html>
